--- a/package.json
+++ b/package.json
@@ -36,7 +36,17 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "^4.15.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11"
+  },
   "devDependencies": {
+    "compression-webpack-plugin": "^11.1.0",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0"
   }
